# maltsaar.ee

./: .gitignore  CNAME  LICENSE  README.md  configuration.toml  pyproject.toml
.github/workflows/: deploy.yml
assets/css/: style.css
assets/js/: i18n.js
assets/languages/: et.json
blog/: how-to-convert-bdf-format-fonts-to-psf-format.md  routing-firefox-through-wireguard.md
content-templates/: 404.html.jinja  index.html.jinja
src/create_website/: __init__.py  blog.py  configuration.py  core.py  jinja.py  log.py  pages.py
src/create_website/mistune_override/: __init__.py  bootstrap_table.py  custom_html_renderer.py
templates/: base.html.jinja  blog-entry.html.jinja  blog-index.html.jinja
